change format of images in gallery to webp to speed loading time

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <!--Header and Navbar-->
 
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="index.html">KIWI KAMPERS <i class="fa-solid fa-kiwi-bird"></i></a>
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" >
+    <a class="navbar-brand" href="index.html">KIWI KAMPERS <i class="fa-solid fa-kiwi-bird"></i></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -52,7 +52,7 @@
 </header>
 
 <!--Hero Image-->
-
+<main>
     <section id="hero-outer">
          <div id="hero-image"></div>
          
@@ -82,16 +82,16 @@
 
     </section>
 
-    
-</body>
+  </main>
 
-
-
-<footer>
+  <footer>
     <ul class="socials">
         <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
         <li><a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
         <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
     </ul>
 </footer>
+
+</body>
+
 </html>
