--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,8 @@
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 
 
+    
+
 </head>
 
 <body>
@@ -53,20 +55,33 @@
 
 <section>
 
+  <div class="containers">
+    <div class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3187.582127729693!2d174.77086348908412!3d-36.9720357147082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d4f80e68ee207%3A0x5df1595e3aae53f5!2sKiwi%20Campers%20Auckland!5e0!3m2!1sen!2suk!4v1718791695508!5m2!1sen!2suk" width="100%" height="650px" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+    <div class="contact-form">
+      <h1 class="title">Contact Details</h1>
+      <h2 class="subtitle">Ask us a question or visit our office.</h2>
+      <form action="">
+        <input type="text" name="name" placeholder="Name" />
+        <input type="email" name="e-mail" placeholder="E-mail Address" />
+        <input type="tel" name="phone" placeholder="Phone Number"/>
+        <textarea name="text" id="" rows="8" placeholder="Question/Query"></textarea>
+        <button class="btn-send">Submit</button>
+      </form>
+    </div>
+  </div>
+ 
 
 </section>
  
-
+    <footer>
+      <ul class="socials">
+          <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+          <li><a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+          <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+      </ul>
+  </footer>
     
 </body>
-
-
-
-<footer>
-    <ul class="socials">
-        <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-        <li><a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-        <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-    </ul>
-</footer>
 </html>
