add final webp images to gallery, add submit thank you page

--- a/gallery.html
+++ b/gallery.html
@@ -92,8 +92,8 @@
             </div>
             
              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a href="assets/images/campsite.jpg" class="fancybox" rel="lightbox" target="_blank">
-                    <img  src="assets/images/campsite.jpg" class="zoom img-fluid"  alt="campsite">
+                <a href="assets/images/campsite.webp" class="fancybox" rel="lightbox" target="_blank">
+                    <img  src="assets/images/campsite.webp" class="zoom img-fluid"  alt="campsite">
                 </a>
             </div>
             
@@ -104,14 +104,14 @@
             </div>
 
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-              <a href="assets/images/nowhere.jpg" class="fancybox" rel="lightbox" target="_blank">
-                  <img  src="assets/images/nowhere.jpg" class="zoom img-fluid"  alt="nowhere">
+              <a href="assets/images/nowhere.webp" class="fancybox" rel="lightbox" target="_blank">
+                  <img  src="assets/images/nowhere.webp" class="zoom img-fluid"  alt="nowhere">
               </a>
           </div>
 
           <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a href="assets/images/offgrid.jpg" class="fancybox" rel="lightbox" target="_blank">
-                <img  src="assets/images/offgrid.jpg" class="zoom img-fluid"  alt="offgrid">
+            <a href="assets/images/offgrid.webp" class="fancybox" rel="lightbox" target="_blank">
+                <img  src="assets/images/offgrid.webp" class="zoom img-fluid"  alt="offgrid">
             </a>
         </div>
 
@@ -128,26 +128,26 @@
     </div>
 
     <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-      <a href="assets/images/skyline.jpg" class="fancybox" rel="lightbox" target="_blank">
-          <img  src="assets/images/skyline.jpg" class="zoom img-fluid"  alt="skyline">
+      <a href="assets/images/skyline.webp" class="fancybox" rel="lightbox" target="_blank">
+          <img  src="assets/images/skyline.webp" class="zoom img-fluid"  alt="skyline">
       </a>
   </div>
 
   <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-    <a href="assets/images/view.jpg" class="fancybox" rel="lightbox" target="_blank">
-        <img  src="assets/images/view.jpg" class="zoom img-fluid"  alt="camperview">
+    <a href="assets/images/view.webp" class="fancybox" rel="lightbox" target="_blank">
+        <img  src="assets/images/view.webp" class="zoom img-fluid"  alt="camperview">
     </a>
 </div>
 
 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-  <a href="assets/images/waterfall.jpg" class="fancybox" rel="lightbox" target="_blank">
-      <img  src="assets/images/waterfall.jpg" class="zoom img-fluid"  alt="waterfall">
+  <a href="assets/images/waterfall.webp" class="fancybox" rel="lightbox" target="_blank">
+      <img  src="assets/images/waterfall.webp" class="zoom img-fluid"  alt="waterfall">
   </a>
 </div>
 
 <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-  <a href="assets/images/balloon.jpg" class="fancybox" rel="lightbox" target="_blank">
-      <img  src="assets/images/balloon.jpg" class="zoom img-fluid"  alt="hotairballoon">
+  <a href="assets/images/balloon.webp" class="fancybox" rel="lightbox" target="_blank">
+      <img  src="assets/images/balloon.webp" class="zoom img-fluid"  alt="hotairballoon">
   </a>
 </div>
 
