--- a/contact.html
+++ b/contact.html
@@ -62,11 +62,11 @@
     <div class="contact-form">
       <h1 class="title">Contact Details</h1>
       <h2 class="subtitle">Ask us a question or visit our office.</h2>
-      <form action="">
-        <input type="text" name="name" placeholder="Name" />
-        <input type="email" name="e-mail" placeholder="E-mail Address" />
+      <form method="get" action="submit.html">
+        <input type="text" name="name" placeholder="Name" required/>
+        <input type="email" name="e-mail" placeholder="E-mail Address" required/>
         <input type="tel" name="phone" placeholder="Phone Number"/>
-        <textarea name="text" id="" rows="8" placeholder="Question/Query"></textarea>
+        <textarea name="text" id="" rows="8" placeholder="Question/Query" required></textarea>
         <button class="btn-send">Submit</button>
       </form>
     </div>
