--- a/404.html
+++ b/404.html
@@ -8,10 +8,10 @@
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <main class="container">
-        <h1>404 - Page Not Found</h1>
+    <main class="contain">
+        <h1>404 - Page Not Found!</h1>
+        <h2>Looks like you're lost! <a href="index.html">Take me home</a></h2>
 <img src="assets/images/404.png" alt="confusedcamper" class="error-img">
-
 
 
     </main>
