replace dummy text with real text on all pages

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Made For Campers.</h2>
-          <p class="lead">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+          <p class="lead">New Zealand is ideal for camper van holidays due to its stunning and diverse landscapes, ranging from beaches to mountains. The country offers well-maintained roads, ample camping facilities, and a network of scenic routes. Its compact size allows travelers to explore many attractions within a short distance. Friendly locals, a safe environment, and a range of outdoor activities enhance the experience. New Zealand's freedom camping policy and numerous camper-friendly towns make it convenient for van travelers to find spots to stay overnight, ensuring a flexible and adventurous travel experience.</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-fluid mx-auto"  alt="campervans" src="assets/images/rv.jpg">
@@ -77,7 +77,7 @@
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
           <h2 class="featurette-heading">Unrivalled Scenery.</h2>
-          <p class="lead">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+          <p class="lead">New Zealand boasts diverse and stunning scenery. The North Island features lush forests, rolling farmlands, and geothermal wonders like Rotorua's geysers and hot springs. The South Island is renowned for its dramatic landscapes, including the Southern Alps, home to Aoraki/Mount Cook. Fiordland's deep fjords and waterfalls, such as Milford Sound, offer breathtaking views. Golden beaches line the Abel Tasman National Park, while the Marlborough Sounds provide a picturesque labyrinth of waterways. Pristine lakes like Lake Tekapo and turquoise rivers contrast with rugged coastlines and serene bays. The country's natural beauty is a paradise for outdoor enthusiasts and nature lovers.</p>
         </div>
         <div class="col-md-5 order-md-1">
           <img class="featurette-image img-fluid mx-auto"  alt="nature" src="assets/images/nature.jpg">
@@ -89,7 +89,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Adrenaline Fuled.</h2>
-          <p class="lead">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+          <p class="lead">New Zealand is a hub for extreme sports enthusiasts, offering a diverse range of adrenaline-pumping activities. Bungee jumping originated here, with iconic sites like the Kawarau Bridge. Skydiving is popular, providing breathtaking views of landscapes such as Queenstown and Lake Taupo. White-water rafting on rivers like the Kaituna and Shotover delivers thrilling rapids. The country also boasts world-class mountain biking trails, especially in Rotorua and Queenstown. Jet boating, pioneered on the Shotover and Dart rivers, offers high-speed water thrills. Additionally, heli-skiing on remote alpine slopes provides a unique skiing adventure, making New Zealand a premier destination for extreme sports.</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-fluid mx-auto" alt="skydiving" src="assets/images/skydiving.jpg">
