--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
         <div class="row">
             <div class="col-md-4">
               <h2>New Zealand</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              <p>New Zealand, known for its stunning landscapes and vibrant Maori culture, offers diverse experiences from picturesque fjords and beaches to dynamic cities, making it a unique travel destination. </p>
               <p><a class="btn btn-secondary" href="about.html" role="button">More</a></p>
             </div>
             <div class="col-md-4">
               <h2>Camper Hire</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              <p>Camper vans in New Zealand offer the ultimate freedom to explore stunning landscapes, from beaches to mountains, providing a unique and flexible way to experience the country's natural beauty.</p>
               <p><a class="btn btn-secondary" href="hire.html" role="button">View Options</a></p>
             </div>
             <div class="col-md-4">
               <h2>Gallery</h2>
-              <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+              <p>Be inspired for your next getaway and see what all the fuss is about. New Zealand landscapes are as unique as they are diverse.</p>
               <p><a class="btn btn-secondary" href="gallery.html" role="button">View</a></p>
             </div>
           </div>
