--- a/hire.html
+++ b/hire.html
@@ -65,7 +65,7 @@
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
           <h2 class="featurette-heading">Budget.</h2>
-          <p class="lead">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+          <p class="lead">For budget camper van rentals in New Zealand, consider companies like <a href="https://www.jucy.com/nz/en" target="_blank">JUCY</a>, <a href="https://spaceshipsrentals.co.nz/" target="_blank">SPACESHIPS</a>, and <a href="https://www.britz.com/nz/en" target="_blank">BRITZ</a>. JUCY offers compact, well-equipped vans with essential amenities. Spaceships provide affordable, easy-to-drive options with added features like free bedding and cooking gear. Britz offers a range of budget-friendly vans, ideal for exploring New Zealand's scenic routes. Booking during the off-season or looking for special deals can help save more. These companies often provide flexible pick-up and drop-off locations, making it convenient for travelers</p>
         </div>
         <div class="col-md-5 order-md-1">
           <img class="featurette-image img-fluid mx-auto"  alt="couple" src="assets/images/budget.jpg">
@@ -77,7 +77,7 @@
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
           <h2 class="featurette-heading">Mid-Range.</h2>
-          <p class="lead">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+          <p class="lead">Mid-range camper vans in New Zealand offer a balance between comfort and affordability, ideal for travelers seeking adventure without breaking the bank. These vans typically feature essentials such as a small kitchen, sleeping area for 2-4 people, and basic bathroom facilities. Brands like <a href="https://www.britz.com/nz/en" target="_blank">BRITZ</a>, <a href="https://www.maui-rentals.com/nz/en" target="_blank"> MAUI</a>, and <a href="https://www.jucy.com/nz/en" target="_blank">JUCY</a> provide reliable options, ensuring safety and convenience. They often include amenities like gas stoves, refrigerators, and solar panels, making them suitable for both short trips and extended road adventures. Renting a mid-range camper van allows for flexible itineraries and the freedom to explore New Zealand’s stunning landscapes at your own pace.</p>
         </div>
         <div class="col-md-5 order-md-1">
           <img class="featurette-image img-fluid mx-auto"  alt="midrange" src="assets/images/mid.jpg">
@@ -89,7 +89,7 @@
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
           <h2 class="featurette-heading">Luxury.</h2>
-          <p class="lead">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+          <p class="lead">Luxury camper vans in New Zealand offer an exceptional way to explore the stunning landscapes and diverse regions of the country in comfort and style. These high-end vehicles come equipped with top-tier amenities, including spacious living areas, gourmet kitchens, plush bedding, and modern bathrooms. Many feature advanced technology like solar panels, Wi-Fi, and entertainment systems. Designed for ultimate convenience and freedom, they allow travelers to enjoy the picturesque outdoors while having all the comforts of home. Popular rental options include <a href="https://www.maui-rentals.com/nz/en" target="_blank">MAUI</a>, <a href="https://www.wilderness.co.nz" target="_blank">WILDERNESS</a>, and <a href="https://www.britz.com/nz/en" target="_blank">BRITZ</a>, which provide a range of luxurious models tailored to meet the needs of discerning adventurers.</p>
         </div>
         <div class="col-md-5 order-md-1">
           <img class="featurette-image img-fluid mx-auto"  alt="luxury" src="assets/images/luxury.jpg">
