add to readme, change css on about and hire headings

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Home<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html">About</a>
@@ -60,10 +60,10 @@
 
     <section>
       <div id="page-heading">
-        <h2>Why choose New Zealand for a campervan holiday?</h2>
+        <h1>Why choose New Zealand for a campervan holiday?</h1>
       </div>
     </section>
-
+<section>
     <div class="container marketing">
 
 
@@ -71,7 +71,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Made For Campers.</h2>
+          <h3 class="featurette-heading">Made For Campers.</h3>
           <p class="lead">New Zealand is ideal for camper van holidays due to its stunning and diverse landscapes, ranging from beaches to mountains. The country offers well-maintained roads, ample camping facilities, and a network of scenic routes. Its compact size allows travelers to explore many attractions within a short distance. Friendly locals, a safe environment, and a range of outdoor activities enhance the experience. New Zealand's freedom camping policy and numerous camper-friendly towns make it convenient for van travelers to find spots to stay overnight, ensuring a flexible and adventurous travel experience.</p>
         </div>
         <div class="col-md-5">
@@ -83,7 +83,7 @@
 
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
-          <h2 class="featurette-heading">Unrivalled Scenery.</h2>
+          <h3 class="featurette-heading">Unrivalled Scenery.</h3>
           <p class="lead">New Zealand boasts diverse and stunning scenery. The North Island features lush forests, rolling farmlands, and geothermal wonders like Rotorua's geysers and hot springs. The South Island is renowned for its dramatic landscapes, including the Southern Alps, home to Aoraki/Mount Cook. Fiordland's deep fjords and waterfalls, such as Milford Sound, offer breathtaking views. Golden beaches line the Abel Tasman National Park, while the Marlborough Sounds provide a picturesque labyrinth of waterways. Pristine lakes like Lake Tekapo and turquoise rivers contrast with rugged coastlines and serene bays. The country's natural beauty is a paradise for outdoor enthusiasts and nature lovers.</p>
         </div>
         <div class="col-md-5 order-md-1">
@@ -95,7 +95,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Adrenaline Fuled.</h2>
+          <h3 class="featurette-heading">Adrenaline Fuled.</h3>
           <p class="lead">New Zealand is a hub for extreme sports enthusiasts, offering a diverse range of adrenaline-pumping activities. Bungee jumping originated here, with iconic sites like the Kawarau Bridge. Skydiving is popular, providing breathtaking views of landscapes such as Queenstown and Lake Taupo. White-water rafting on rivers like the Kaituna and Shotover delivers thrilling rapids. The country also boasts world-class mountain biking trails, especially in Rotorua and Queenstown. Jet boating, pioneered on the Shotover and Dart rivers, offers high-speed water thrills. Additionally, heli-skiing on remote alpine slopes provides a unique skiing adventure, making New Zealand a premier destination for extreme sports.</p>
         </div>
         <div class="col-md-5">
