--- a/hire.html
+++ b/hire.html
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Home<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html">About</a>
@@ -60,10 +60,10 @@
 
     <section>
       <div id="page-heading">
-        <h2>Which campervan is right for me?</h2>
+        <h1>Which campervan is right for me?</h1>
       </div>
     </section>
-
+<section>
     <div class="container marketing">
 
 
