--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Home<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="about.html">About</a>
@@ -68,25 +68,25 @@
       
       <div class="row">
         <div class="col-md-7">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3187.582127729693!2d174.77086348908412!3d-36.9720357147082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d4f80e68ee207%3A0x5df1595e3aae53f5!2sKiwi%20Campers%20Auckland!5e0!3m2!1sen!2suk!4v1718791695508!5m2!1sen!2suk" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe class="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3187.582127729693!2d174.77086348908412!3d-36.9720357147082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d4f80e68ee207%3A0x5df1595e3aae53f5!2sKiwi%20Campers%20Auckland!5e0!3m2!1sen!2suk!4v1718791695508!5m2!1sen!2suk" allowfullscreen></iframe>
           </div>
     
           <div class="col-md-5">
             <form method="get" action="submit.html">
               <div class="form-group">
-                <input type="text" class="form-control" name="" value="" placeholder="Name" required>
+                <input type="text" class="form-control"  placeholder="Name" required>
               </div>
               <br>
               <div class="form-group">
-                <input type="email" class="form-control" name="" value="" placeholder="E-mail" required>
+                <input type="email" class="form-control" placeholder="E-mail" required>
               </div>
               <br>
               <div class="form-group">
-                <input type="tel" class="form-control" name="" value="" placeholder="Phone">
+                <input type="tel" class="form-control" placeholder="Phone">
               </div>
               <br>
               <div class="form-group">
-                <textarea class="form-control" name="" rows="3" placeholder="Message" required></textarea>
+                <textarea class="form-control" rows="3" placeholder="Message" required></textarea>
               </div>
               <button class="btn btn-default" type="submit" name="button">
                   <i class="fa fa-paper-plane-o" aria-hidden="true"></i> Submit
