--- a/index.html
+++ b/index.html
@@ -1,38 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-<!--Meta Link-->    
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KIWI KAMPERS</title>
+  <!--Meta Link-->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KIWI KAMPERS</title>
 
-<!--Bootstrap and Fontawesome Links-->
+  <!--Bootstrap and Fontawesome Links-->
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/e31f5a7661.js" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/e31f5a7661.js" crossorigin="anonymous"></script>
 
-<!--CSS Link-->
+  <!--CSS Link-->
 
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+  <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 
-    <!--Favicon Links-->
+  <!--Favicon Links-->
 
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 
 </head>
 
 <body>
 
-<!--Header and Navbar-->
+  <!--Header and Navbar-->
 
-<header>
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" >
-    <a class="navbar-brand" href="index.html">KIWI KAMPERS <i class="fa-solid fa-kiwi-bird"></i></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+  <header>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <a class="navbar-brand" href="index.html">KIWI KAMPERS <i class="fa-solid fa-kiwi-bird"></i></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -47,44 +50,47 @@
             <a class="nav-link" href="hire.html">Camper Hire</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="gallery.html">Gallery</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
+            <a class="nav-link" href="gallery.html">Gallery</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
         </ul>
       </div>
     </nav>
-</header>
+  </header>
 
-<!--Hero Image-->
-<main>
+  <!--Hero Image-->
+  <main>
     <section id="hero-outer">
-         <div id="hero-image"></div>
-         
-         <div id="welcome-text">
-            <h1>ADVENTURE AWAITS</h1>
-         </div>
+      <div id="hero-image"></div>
+
+      <div id="welcome-text">
+        <h1>ADVENTURE AWAITS</h1>
+      </div>
     </section>
 
     <section id="info">
-        <div class="row">
-            <div class="col-md-4">
-              <h2>New Zealand</h2>
-              <p>New Zealand, known for its stunning landscapes and vibrant Maori culture, offers diverse experiences from picturesque fjords and beaches to dynamic cities, making it a unique travel destination. </p>
-              <p><a class="btn btn-secondary" href="about.html" role="button">More</a></p>
-            </div>
-            <div class="col-md-4">
-              <h2>Camper Hire</h2>
-              <p>Camper vans in New Zealand offer the ultimate freedom to explore stunning landscapes, from beaches to mountains, providing a unique and flexible way to experience the country's natural beauty.</p>
-              <p><a class="btn btn-secondary" href="hire.html" role="button">View Options</a></p>
-            </div>
-            <div class="col-md-4">
-              <h2>Gallery</h2>
-              <p>Be inspired for your next getaway and see what all the fuss is about. New Zealand landscapes are as unique as they are diverse.</p>
-              <p><a class="btn btn-secondary" href="gallery.html" role="button">View</a></p>
-            </div>
-          </div>
+      <div class="row">
+        <div class="col-md-4">
+          <h2>New Zealand</h2>
+          <p>New Zealand, known for its stunning landscapes and vibrant Maori culture, offers diverse experiences from
+            picturesque fjords and beaches to dynamic cities, making it a unique travel destination. </p>
+          <p><a class="btn btn-secondary" href="about.html" role="button">More</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>Camper Hire</h2>
+          <p>Camper vans in New Zealand offer the ultimate freedom to explore stunning landscapes, from beaches to
+            mountains, providing a unique and flexible way to experience the country's natural beauty.</p>
+          <p><a class="btn btn-secondary" href="hire.html" role="button">View Options</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>Gallery</h2>
+          <p>Be inspired for your next getaway and see what all the fuss is about. New Zealand landscapes are as unique
+            as they are diverse.</p>
+          <p><a class="btn btn-secondary" href="gallery.html" role="button">View</a></p>
+        </div>
+      </div>
 
     </section>
 
@@ -92,16 +98,21 @@
 
   <footer>
     <ul class="socials">
-        <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-        <li><a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-        <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+      <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+      <li><a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+      <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
     </ul>
-</footer>
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </body>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 
 </html>
