add comments to code

--- a/gallery.html
+++ b/gallery.html
@@ -58,7 +58,7 @@
           </nav>
     </header>
 
-
+<!--Gallery-->
     
 
       <div class="container page-top">
@@ -200,7 +200,7 @@
 
     </div>
 
-
+<!--Footer and Social links-->
     
 
     <footer>
