--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
 
   </main>
 
+<!--Footer and Social links-->
+
   <footer>
     <ul class="socials">
       <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
