--- a/404.html
+++ b/404.html
@@ -58,6 +58,8 @@
             </nav>
         </header>
 
+<!--404 image-->
+
     <main class="contain">
         <h1>404 - Page Not Found!</h1>
         <h2>Looks like you're lost! <a href="index.html">Take me home</a></h2>
@@ -65,6 +67,8 @@
 
 
     </main>
+
+<!--Footer and Social links-->
 
     <footer>
         <ul class="socials">
