--- a/about.html
+++ b/about.html
@@ -58,6 +58,8 @@
           </nav>
     </header>
 
+<!--Page title-->
+
     <section>
       <div id="page-heading">
         <h1>Why choose New Zealand for a campervan holiday?</h1>
@@ -66,6 +68,7 @@
 <section>
     <div class="container marketing">
 
+<!--Features-->
 
       <hr class="featurette-divider">
 
@@ -111,6 +114,8 @@
    
 
 </section>
+
+<!--Footer and Social links-->
 
 <footer>
   <ul class="socials">
