--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,8 @@
           </nav>
     </header>
 
+<!--Contact form-->
+
     <section id="contact">
       <div class="container">
         <div class="well well-sm">
@@ -66,6 +68,8 @@
           <p>Ask a question or visit our office</p>
         </div>
       
+<!--Iframe map-->
+
       <div class="row">
         <div class="col-md-7">
           <iframe class="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3187.582127729693!2d174.77086348908412!3d-36.9720357147082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d4f80e68ee207%3A0x5df1595e3aae53f5!2sKiwi%20Campers%20Auckland!5e0!3m2!1sen!2suk!4v1718791695508!5m2!1sen!2suk" allowfullscreen></iframe>
@@ -97,6 +101,8 @@
       </div>
     </section>
  
+<!--Footer and Social links-->
+
     <footer>
       <ul class="socials">
           <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
