--- a/hire.html
+++ b/hire.html
@@ -58,6 +58,8 @@
           </nav>
     </header>
 
+<!--Page title-->
+
     <section>
       <div id="page-heading">
         <h1>Which campervan is right for me?</h1>
@@ -66,6 +68,7 @@
 <section>
     <div class="container marketing">
 
+<!--Features-->
 
       <hr class="featurette-divider">
 
@@ -112,6 +115,7 @@
 
 </section>
 
+<!--Footer and Social links-->
 
     <footer>
       <ul class="socials">
