--- a/submit.html
+++ b/submit.html
@@ -60,6 +60,8 @@
 
 <br>
 
+<!--Submit page thank you message-->
+
 <section>
 
     <div class="submit-page">
@@ -69,6 +71,8 @@
     </div>
    
 </section>
+
+<!--Footer and Social links-->
 
   <footer>
     <ul class="socials">
